Changed UI Colors for multiple storyboards

--- a/Roomie/Roomie/Base.lproj/Main.storyboard
+++ b/Roomie/Roomie/Base.lproj/Main.storyboard
@@ -30,7 +30,7 @@
                                 </constraints>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" red="0.40443294759999998" green="0.83409646599999998" blue="0.88384175409999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="kCj-Qu-p2v" firstAttribute="centerY" secondItem="ZQx-vw-gZg" secondAttribute="centerY" id="iZm-su-QfK"/>
                             <constraint firstItem="kCj-Qu-p2v" firstAttribute="centerX" secondItem="ZQx-vw-gZg" secondAttribute="centerX" id="sSM-lQ-Awu"/>
@@ -534,7 +534,6 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Yfz-Si-pok">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="barTintColor" red="0.40443294759999998" green="0.83409646599999998" blue="0.88384175409999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <textAttributes key="titleTextAttributes">
                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         </textAttributes>
