--- a/Roomie/Roomie/Expense.storyboard
+++ b/Roomie/Roomie/Expense.storyboard
@@ -22,14 +22,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="67" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="cuC-WW-DVP">
-                                <rect key="frame" x="0.0" y="172" width="320" height="396"/>
+                                <rect key="frame" x="8" y="172" width="304" height="396"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="oweExpenseCell" rowHeight="67" id="5rA-nZ-un8" customClass="oweExpenseTableViewCell" customModule="Roomie" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="320" height="67"/>
+                                        <rect key="frame" x="0.0" y="28" width="304" height="67"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="5rA-nZ-un8" id="DFp-z0-Cuy">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="66.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="304" height="66.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="You Owe:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5ud-75-8SZ">
@@ -84,10 +84,10 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="owedExpenseCell" rowHeight="79" id="nMG-OG-kOA" customClass="owedExpenseTableViewCell" customModule="Roomie" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="95" width="320" height="79"/>
+                                        <rect key="frame" x="0.0" y="95" width="304" height="79"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="nMG-OG-kOA" id="fAj-uc-Kse">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="78.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="304" height="78.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="$" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U0h-sZ-JIu">
@@ -147,8 +147,8 @@
                                     <outlet property="delegate" destination="Mdk-HO-Xy6" id="7xu-RH-oZp"/>
                                 </connections>
                             </tableView>
-                            <segmentedControl opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="MLi-yW-IM6">
-                                <rect key="frame" x="102" y="145" width="121" height="29"/>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="MLi-yW-IM6">
+                                <rect key="frame" x="110.5" y="139" width="99" height="29"/>
                                 <segments>
                                     <segment title="Owe"/>
                                     <segment title="Owed"/>
@@ -180,12 +180,12 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="MLi-yW-IM6" firstAttribute="centerX" secondItem="RRg-Qn-Cum" secondAttribute="centerX" id="Av5-uc-tnh"/>
-                            <constraint firstAttribute="trailing" secondItem="cuC-WW-DVP" secondAttribute="trailing" id="DLe-i4-9kP"/>
-                            <constraint firstItem="cuC-WW-DVP" firstAttribute="leading" secondItem="RRg-Qn-Cum" secondAttribute="leading" id="FeY-kt-1CA"/>
+                            <constraint firstAttribute="trailing" secondItem="cuC-WW-DVP" secondAttribute="trailing" constant="8" id="DLe-i4-9kP"/>
+                            <constraint firstItem="cuC-WW-DVP" firstAttribute="leading" secondItem="RRg-Qn-Cum" secondAttribute="leading" constant="8" id="FeY-kt-1CA"/>
                             <constraint firstItem="cuC-WW-DVP" firstAttribute="top" secondItem="ePv-ld-Wvr" secondAttribute="bottom" constant="44" id="IV2-1s-WTe"/>
                             <constraint firstItem="ePv-ld-Wvr" firstAttribute="top" secondItem="I57-Lk-qal" secondAttribute="bottom" constant="34" id="SQJ-B4-Hvk"/>
                             <constraint firstAttribute="bottom" secondItem="cuC-WW-DVP" secondAttribute="bottom" id="aWy-Y3-n6r"/>
-                            <constraint firstItem="MLi-yW-IM6" firstAttribute="top" secondItem="I57-Lk-qal" secondAttribute="bottom" constant="81" id="eIa-wm-ATe"/>
+                            <constraint firstItem="MLi-yW-IM6" firstAttribute="top" secondItem="I57-Lk-qal" secondAttribute="bottom" constant="75" id="eIa-wm-ATe"/>
                             <constraint firstItem="ePv-ld-Wvr" firstAttribute="centerX" secondItem="RRg-Qn-Cum" secondAttribute="centerX" id="jai-PZ-0h5"/>
                         </constraints>
                     </view>
