--- a/Roomie/Roomie/Members.storyboard
+++ b/Roomie/Roomie/Members.storyboard
@@ -7,6 +7,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -33,14 +34,14 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LsO-Ht-iIh">
-                                            <rect key="frame" x="0.0" y="0.0" width="108" height="100"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" secondItem="LsO-Ht-iIh" secondAttribute="height" multiplier="27:25" id="ffL-pH-aeq"/>
-                                            </constraints>
+                                            <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                             <state key="normal" title="CB">
                                                 <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             </state>
+                                            <connections>
+                                                <segue destination="avV-n1-dTE" kind="presentation" id="MIS-zE-lGk"/>
+                                            </connections>
                                         </button>
                                     </subviews>
                                 </view>
@@ -55,7 +56,7 @@
                                 </connections>
                             </collectionViewCell>
                         </cells>
-                        <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="mdz-Hm-juN">
+                        <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="CollectionCell" id="mdz-Hm-juN">
                             <rect key="frame" x="0.0" y="0.0" width="375" height="10"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </collectionReusableView>
@@ -81,6 +82,75 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3ts-Gh-Jdt" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="951.20000000000005" y="604.94752623688157"/>
+        </scene>
+        <!--Member Profile View Controller-->
+        <scene sceneID="2ys-kQ-WOj">
+            <objects>
+                <viewController id="avV-n1-dTE" customClass="MemberProfileViewController" customModule="Roomie" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ggq-Bp-2G7">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3uT-e2-das">
+                                <rect key="frame" x="16" y="222" width="343" height="223"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Profile" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fVj-f4-zkD">
+                                        <rect key="frame" x="147" y="8" width="49" height="21"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="21" id="Fhf-Jv-YX2"/>
+                                            <constraint firstAttribute="width" secondItem="fVj-f4-zkD" secondAttribute="height" multiplier="7:3" id="uhn-sv-UBJ"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="3uT-e2-das" secondAttribute="height" multiplier="343:223" id="Ii5-bt-Qgj"/>
+                                    <constraint firstAttribute="trailing" secondItem="fVj-f4-zkD" secondAttribute="trailing" constant="147" id="azs-1W-qFy"/>
+                                    <constraint firstItem="fVj-f4-zkD" firstAttribute="top" secondItem="3uT-e2-das" secondAttribute="top" constant="8" id="bcg-CY-GM1"/>
+                                    <constraint firstAttribute="width" constant="343" id="fmT-A6-nT2"/>
+                                    <constraint firstItem="fVj-f4-zkD" firstAttribute="leading" secondItem="3uT-e2-das" secondAttribute="leading" constant="147" id="hgA-tY-fjt"/>
+                                    <constraint firstAttribute="height" constant="223" id="rrA-SY-fad"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="20"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ewv-dH-ad1">
+                                <rect key="frame" x="94" y="453" width="187" height="54"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="54" id="qzI-OR-gQX"/>
+                                    <constraint firstAttribute="width" secondItem="ewv-dH-ad1" secondAttribute="height" multiplier="187:54" id="s2s-GH-q4a"/>
+                                </constraints>
+                                <state key="normal" title="Cancel"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="20"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="cancelButtonTapped:" destination="avV-n1-dTE" eventType="touchUpInside" id="fRF-ZJ-5Tn"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="ewv-dH-ad1" firstAttribute="top" secondItem="3uT-e2-das" secondAttribute="bottom" constant="8" id="9Of-qH-b3O"/>
+                            <constraint firstItem="Y4R-IL-4o5" firstAttribute="trailing" secondItem="ewv-dH-ad1" secondAttribute="trailing" constant="94" id="9yM-hQ-muJ"/>
+                            <constraint firstItem="3uT-e2-das" firstAttribute="centerY" secondItem="ggq-Bp-2G7" secondAttribute="centerY" id="Gby-fx-8m6"/>
+                            <constraint firstItem="3uT-e2-das" firstAttribute="centerX" secondItem="ggq-Bp-2G7" secondAttribute="centerX" id="lFv-Y6-7Uk"/>
+                            <constraint firstItem="ewv-dH-ad1" firstAttribute="leading" secondItem="Y4R-IL-4o5" secondAttribute="leading" constant="94" id="qoS-yq-88W"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Y4R-IL-4o5"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Hee-r5-ouz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1756" y="490.70464767616198"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="ksM-nv-oNZ">
