--- a/Roomie/Roomie/Members.storyboard
+++ b/Roomie/Roomie/Members.storyboard
@@ -92,27 +92,25 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3uT-e2-das">
-                                <rect key="frame" x="16" y="222" width="343" height="223"/>
+                                <rect key="frame" x="16" y="221" width="343" height="225"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Profile" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fVj-f4-zkD">
-                                        <rect key="frame" x="147" y="8" width="49" height="21"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Profile" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fVj-f4-zkD">
+                                        <rect key="frame" x="8" y="8" width="327" height="30"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="21" id="Fhf-Jv-YX2"/>
-                                            <constraint firstAttribute="width" secondItem="fVj-f4-zkD" secondAttribute="height" multiplier="7:3" id="uhn-sv-UBJ"/>
+                                            <constraint firstAttribute="height" constant="30" id="aum-Qu-bZa"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="3uT-e2-das" secondAttribute="height" multiplier="343:223" id="Ii5-bt-Qgj"/>
-                                    <constraint firstAttribute="trailing" secondItem="fVj-f4-zkD" secondAttribute="trailing" constant="147" id="azs-1W-qFy"/>
-                                    <constraint firstItem="fVj-f4-zkD" firstAttribute="top" secondItem="3uT-e2-das" secondAttribute="top" constant="8" id="bcg-CY-GM1"/>
-                                    <constraint firstAttribute="width" constant="343" id="fmT-A6-nT2"/>
-                                    <constraint firstItem="fVj-f4-zkD" firstAttribute="leading" secondItem="3uT-e2-das" secondAttribute="leading" constant="147" id="hgA-tY-fjt"/>
-                                    <constraint firstAttribute="height" constant="223" id="rrA-SY-fad"/>
+                                    <constraint firstItem="fVj-f4-zkD" firstAttribute="centerX" secondItem="3uT-e2-das" secondAttribute="centerX" id="HKB-5m-VnV"/>
+                                    <constraint firstItem="fVj-f4-zkD" firstAttribute="top" secondItem="3uT-e2-das" secondAttribute="top" constant="8" id="Lf2-cK-lAb"/>
+                                    <constraint firstAttribute="height" constant="225" id="hm0-rc-SU6"/>
+                                    <constraint firstAttribute="trailing" secondItem="fVj-f4-zkD" secondAttribute="trailing" constant="8" id="tud-XI-UNM"/>
+                                    <constraint firstItem="fVj-f4-zkD" firstAttribute="leading" secondItem="3uT-e2-das" secondAttribute="leading" constant="8" id="uuk-V2-8Hd"/>
                                 </constraints>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
@@ -121,7 +119,7 @@
                                 </userDefinedRuntimeAttributes>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ewv-dH-ad1">
-                                <rect key="frame" x="94" y="453" width="187" height="54"/>
+                                <rect key="frame" x="94" y="454" width="187" height="54"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="54" id="qzI-OR-gQX"/>
@@ -140,8 +138,10 @@
                         </subviews>
                         <constraints>
                             <constraint firstItem="ewv-dH-ad1" firstAttribute="top" secondItem="3uT-e2-das" secondAttribute="bottom" constant="8" id="9Of-qH-b3O"/>
+                            <constraint firstItem="Y4R-IL-4o5" firstAttribute="trailing" secondItem="3uT-e2-das" secondAttribute="trailing" constant="16" id="9XE-Cq-heK"/>
                             <constraint firstItem="Y4R-IL-4o5" firstAttribute="trailing" secondItem="ewv-dH-ad1" secondAttribute="trailing" constant="94" id="9yM-hQ-muJ"/>
                             <constraint firstItem="3uT-e2-das" firstAttribute="centerY" secondItem="ggq-Bp-2G7" secondAttribute="centerY" id="Gby-fx-8m6"/>
+                            <constraint firstItem="3uT-e2-das" firstAttribute="leading" secondItem="Y4R-IL-4o5" secondAttribute="leading" constant="16" id="jOB-tb-Z9K"/>
                             <constraint firstItem="3uT-e2-das" firstAttribute="centerX" secondItem="ggq-Bp-2G7" secondAttribute="centerX" id="lFv-Y6-7Uk"/>
                             <constraint firstItem="ewv-dH-ad1" firstAttribute="leading" secondItem="Y4R-IL-4o5" secondAttribute="leading" constant="94" id="qoS-yq-88W"/>
                         </constraints>
